# wishapp

./: .envrc  .gitignore  .yamllint  .yamllint.yml  0_test.txt  Cargo.toml  README.md  TODO.md  docker-compose.yml  dynamodb-local-metadata.json  package-lock.json  package.json
.githooks/: pre-push
.github/workflows/: ci.yml  deploy.yml  pipeline.yml  setup.yml
backend/: .eslintrc.json  eslint.config.js  package.json
backend/src/: index.ts
ci/: go.mod  go.sum  main.go
e2e/: package-lock.json  package.json
frontend/: eslint.config.js  package.json
frontend/src/: index.ts
infra/: .gitignore  README.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
infra/lib/: infra-stack.d.ts  infra-stack.js  infra-stack.ts
infra/src/: main.rs
infra/test/: infra.test.js  infra.test.ts
infra_backup_20250415142449/: Cargo.toml  README.md  cdk.json
scripts/: install-hooks.sh
src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  utils.rs  wishlist.rs
src/backend/: main.rs  mod.rs
src/frontend/: lib.rs  mod.rs
src/handlers/: mod.rs  wishlist.rs
test/: system.txt
tests/: e2e.rs  integration.rs  integration_test.rs  wishlist_tests.rs
tests/e2e/: basic_navigation.rs
