[package]
name = "wishlist_api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.9.0"
lambda_runtime = "0.9.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
once_cell = "1.19.0"

[dev-dependencies]
mockito = "1.1"
httpmock = "0.7.0"
testcontainers = "0.15"
tokio-test = "0.4"