[package]
name = "wishlist_api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
lambda_runtime = { version = "0.13.0", optional = true }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["serde", "v4"] }
bytes = "1.0"
once_cell = "1.19.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

[dev-dependencies]
mockito = "1.1"
httpmock = "0.7.0"
testcontainers = "0.15"
tokio-test = "0.4"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serial_test = "2.0"
rand = "0.8"

[features]
default = []
aws_lambda = ["lambda_runtime"]